syntax = "proto3";

// protoc -I=. --go_out=. --go-grpc_out=. --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative keyvalue.proto

option go_package = "ex05_grpc/keyvalue";

message GetRequest {
    string key = 1;
    // repeated string value = 2; // 배열
}

message GetResponse {
    string value = 1;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {}

service KeyValue {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (PutResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}